# masclet-imperi-web

./: .coverage  .dependency-cruiser.js  .dockerignore  .env.example  .env.production  .gitattributes  .gitignore  .windsurfrules  ARREGLO-DIRECTO.sh  ARREGLO-FINAL-HOSTIAS.sh  Buenas copilot,.txt  Cada archivo tiene un propósito esp.txt  DESPLIEGUE-FINAL-REAL.ps1  Dockerfile.frontend  He analizado las carpetas de compon.txt  LIMPIAR-AWS.sh  LIMPIAR-DOCKER-AWS.sh  PLAN_DESARROLLO.md  SOLUCION-DEFINITIVA-REACT.sh  SOLUCION-DEFINITIVA.ps1  actualizar_mare.py  actualizar_mare_por_nombre.py  add-exports.sh  amplify.yml  analisis_dashboard_problemas.md  apiConfig-fix-corrected.js  apiConfig-fix.txt  api_CScnKk7n.txt  api_CScnKk7n_exports.txt  api_CScnKk7n_fixed.txt  api_CScnKk7n_fixed_full.txt  api_CScnKk7n_fixed_optimal.txt  apply_custom_migration.py  arreglar-frontend-aws.sh  auth-proxy-fixed.js  auth-proxy-fixed.mjs  auth-proxy-mejorado.mjs  auth-proxy2-fixed.js  auth-proxy3-fixed.js  authService_fix.js  (+93 more)
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  aerich.ini  apply_alletar_migration.py  apply_migrations.py  check_alletar_values.py  check_animals.py  check_db_and_auth.py  check_db_connection.py  check_users.py  check_users_db.py  commands.txt  conftest.py  dashboard.py  endpoints_test_log.md  endpoints_test_plan.md  fix_dashboard.py  fix_dashboard_endpoint.py  fix_dashboard_service.py  fix_database.py  fix_dates.py  fix_imports.py  fix_plan.md  get_explotacions.py  list_users.py  modificar_fechas.py  next_steps.md  nuevo_animal.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_server.bat  run_test.bat  run_tests.bat  security_audit_report.json  (+29 more)
backend/app/: .env.old  custom_openapi.py  database.py  db.py  main.py  main.py.backup  static_openapi.json
backend/backups/: backup_history.json  backup_log.json
backend/database/: 11 EXLOTACIONES EN BRUTO, TODAS.xlsx  11 EXPLOTACIONES procesadas pendientes de revisar.xlsx  2 explot.xlsx  Símbolo del sistema - CUsersUsuarioanaconda3condabinconda.bat  activate masclet-imperi - uvicorn  app.mainapp --reload --host 0.0.0.0 --port 8000.txt  cline_task_feb-28-2025_12-28-13-pm.md  cline_task_mar-1-2025_1-14-12-pm.md  logs de masclet-db.txt  matriz_master.csv  matriz_master_GRAU_CASANOVA.csv  matriz_master_GURANS.csv  prueba_elgrau.csv  pruebaampliacion.csv  (+4 more)
(+2538 files in other folders)
