[tool.poetry]
name = "masclet-imperi"
version = "0.1.0"
description = "API para gestión de ganadería"
authors = [
    "Your Name <your.email@example.com>",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
tortoise-orm = "^0.20.0"
aiosqlite = "^0.20.0"
httpx = "^0.27.0"

[tool.poetry.dependencies.uvicorn]
extras = [
    "standard",
]
version = "^0.29.0"

[tool.poetry.dependencies.python-jose]
extras = [
    "cryptography",
]
version = "^3.3.0"

[tool.poetry.dependencies.passlib]
extras = [
    "bcrypt",
]
version = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.3"
pytest-ordering = "^0.6.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
addopts = "-v --cov=app --cov-report=html"
asyncio_mode = "auto"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
